tests/expectations/compiler/mappings/shadowed_mapping_2_fail.out
Error [EAST0372017]: The name `one` is defined multiple times.
    --> compiler-test:11:13
     |
   4 |       mapping one: field => field;
     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ previous definition of `one` here
   ...
  11 |           let one: u8 = 1u8;
     |               ^^^ `one` redefined here
